--- a/src/NCU.AnnualWorks/ClientApp/src/styles/components/common/_index.scss
+++ b/src/NCU.AnnualWorks/ClientApp/src/styles/components/common/_index.scss
@@ -7,3 +7,7 @@
 @import 'layout';
 @import 'me-control';
 @import 'theme';
+@import 'theses-simple-list';
+@import 'tile';
+@import 'people-picker';
+@import 'page';
